--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -249,12 +249,123 @@
         justify-content: center;
         align-content: center;
 
-        .item{
+        .item {
             margin-right: 20px;
-            a{
+
+            a {
                 font-size: 20px;
                 font-weight: 600;
             }
+        }
+    }
+}
+
+#search_order_list,
+#search_order_list_success,
+#search_order_list_shipping,
+#search_order_list_transferring,
+#search_order_list_completed,
+#search_order_list_need_treatment {
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-flow: row wrap;
+
+    .choice_type_search {
+        width: 20%;
+        position: relative;
+
+        .type_current_order {
+            background-color: #fff;
+            border: 1px solid #e8e9eb;
+            margin-bottom: 0px;
+            height: 50px;
+            padding: 13px 10px 0px 20px;
+            display: flex;
+            justify-content: space-between;
+
+            .icon {
+                padding-top: 10px;
+
+                .icon-up {
+                    display: none;
+                }
+
+                .icon-down {
+                    display: block;
+                }
+            }
+        }
+
+        .list {
+            background: #fff;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            left: 0;
+            z-index: 5;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            background-color: #fff;
+            border: 1px solid #e8e9eb;
+            border-top: none;
+            width: 115%;
+            display: none;
+
+            li {
+                margin: 0 8px;
+                padding: 8px 15px;
+                line-height: 1.3;
+            }
+        }
+    }
+
+    .choice_type_search.gt_active {
+        .type_current_order {
+            .icon {
+                .icon-up {
+                    display: block;
+                }
+
+                .icon-down {
+                    display: none;
+                }
+            }
+        }
+
+        .list {
+            display: block;
+        }
+    }
+
+    .input_search {
+        width: 65%;
+
+        #search_order_input {
+            height: 50px;
+            width: 100%;
+            background-color: #fff;
+            border: 1px solid #e8e9eb;
+            padding-left: 15px;
+            color: black;
+
+        }
+    }
+
+    .button_submit {
+        width: 15%;
+
+        input {
+            height: 50px;
+            width: 100%;
+            background: #38c172;
+            border: 1px solid transparent;
+            font-size: 18px;
+            color: #fff;
+            font-weight: bold;
         }
     }
 }
