--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11050,3 +11050,158 @@ a.text-dark:focus {
   font-weight: bold;
 }
 
+.header_order {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.header_order .search_order {
+  width: 55%;
+}
+
+.header_order .search_order #search_order_list_info {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search.gt_active .type_current_order .icon .icon-up {
+  display: block;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search.gt_active .type_current_order .icon .icon-down {
+  display: none;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search.gt_active .list {
+  display: block;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search {
+  width: 30%;
+  position: relative;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search .type_current_order {
+  background-color: #fff;
+  border: 1px solid #e8e9eb;
+  margin-bottom: 0px;
+  height: 50px;
+  padding: 13px 10px 0px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search .type_current_order .icon {
+  padding-top: 9px;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search .type_current_order .icon .icon-up {
+  display: none;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search .type_current_order .icon .icon-down {
+  display: block;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search .list {
+  background: #fff;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  left: 0;
+  z-index: 5;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #fff;
+  border: 1px solid #e8e9eb;
+  border-top: none;
+  width: 115%;
+  display: none;
+}
+
+.header_order .search_order #search_order_list_info .choice_type_search .list li {
+  margin: 0 8px;
+  padding: 8px 15px;
+  line-height: 1.3;
+}
+
+.header_order .search_order #search_order_list_info .input_search {
+  width: 60%;
+}
+
+.header_order .search_order #search_order_list_info .input_search input {
+  height: 50px;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #e8e9eb;
+  padding-left: 15px;
+  color: black;
+}
+
+.header_order .search_order #search_order_list_info .button_submit input {
+  height: 50px;
+  width: 100%;
+  background: #38c172;
+  border: 1px solid transparent;
+  font-size: 18px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.header_order .create_order_on_ghtk #info-call-ghtk-new {
+  display: flex;
+}
+
+.header_order .create_order_on_ghtk #info-call-ghtk-new #info-received {
+  height: 50px;
+  width: 100px;
+}
+
+.header_order .create_order_on_ghtk #info-call-ghtk-new .btn-primary {
+  padding: 0 10px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.header_order .action_list .contain {
+  display: inline-block;
+  background: red;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  position: relative;
+  margin-left: 20px;
+}
+
+.header_order .action_list .contain svg {
+  width: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.header_order .list_action {
+  background: #fff;
+  position: absolute;
+  top: 80%;
+  right: 0;
+  left: 20px;
+  z-index: 5;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #fff;
+  border: 1px solid #e8e9eb;
+  border-top: none;
+  width: 100%;
+}
+
+.header_order .list_action li {
+  margin: 0 8px;
+  padding: 8px 15px;
+  line-height: 1.3;
+}
+
