--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -369,3 +369,174 @@
         }
     }
 }
+
+
+.header_order {
+    display: flex;
+    flex-flow: row wrap;
+
+    .search_order {
+        width: 55%;
+
+        #search_order_list_info {
+            width: 100%;
+            display: flex;
+            flex-flow: row wrap;
+
+            .choice_type_search.gt_active{
+                .type_current_order {
+
+                    .icon {
+
+                        .icon-up {
+                            display: block;
+                        }
+
+                        .icon-down {
+                            display: none;
+                        }
+                    }
+                }
+
+                .list{
+                    display: block;
+                }
+            }
+
+            .choice_type_search {
+                width: 30%;
+                position: relative;
+
+                .type_current_order {
+                    background-color: #fff;
+                    border: 1px solid #e8e9eb;
+                    margin-bottom: 0px;
+                    height: 50px;
+                    padding: 13px 10px 0px 20px;
+                    display: flex;
+                    justify-content: space-between;
+
+                    .icon {
+                        padding-top: 9px;
+
+                        .icon-up {
+                            display: none;
+                        }
+
+                        .icon-down {
+                            display: block;
+                        }
+                    }
+                }
+
+                .list {
+                    background: #fff;
+                    position: absolute;
+                    top: 100%;
+                    right: 0;
+                    left: 0;
+                    z-index: 5;
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                    background-color: #fff;
+                    border: 1px solid #e8e9eb;
+                    border-top: none;
+                    width: 115%;
+                    display: none;
+
+                    li {
+                        margin: 0 8px;
+                        padding: 8px 15px;
+                        line-height: 1.3;
+                    }
+                }
+            }
+
+            .input_search {
+                width: 60%;
+
+                input {
+                    height: 50px;
+                    width: 100%;
+                    background-color: #fff;
+                    border: 1px solid #e8e9eb;
+                    padding-left: 15px;
+                    color: black;
+                }
+            }
+
+            .button_submit {
+                input {
+                    height: 50px;
+                    width: 100%;
+                    background: #38c172;
+                    border: 1px solid transparent;
+                    font-size: 18px;
+                    color: #fff;
+                    font-weight: bold;
+                }
+            }
+        }
+
+    }
+
+    .create_order_on_ghtk {
+        #info-call-ghtk-new {
+            display: flex;
+
+            #info-received {
+                height: 50px;
+                width: 100px;
+            }
+
+            .btn-primary {
+                padding: 0 10px;
+                height: 50px;
+                margin-left: 10px;
+            }
+        }
+    }
+
+    .action_list {
+        .contain {
+            display: inline-block;
+            background: red;
+            width: 50px;
+            height: 50px;
+            border-radius: 5px;
+            position: relative;
+            margin-left: 20px;
+
+            svg {
+                width: 20px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+    }
+
+    .list_action {
+        background: #fff;
+        position: absolute;
+        top: 80%;
+        right: 0;
+        left: 20px;
+        z-index: 5;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        background-color: #fff;
+        border: 1px solid #e8e9eb;
+        border-top: none;
+        width: 100%;
+
+        li {
+            margin: 0 8px;
+            padding: 8px 15px;
+            line-height: 1.3;
+        }
+    }
+}
