--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -383,7 +383,7 @@
             display: flex;
             flex-flow: row wrap;
 
-            .choice_type_search.gt_active{
+            .choice_type_search.gt_active {
                 .type_current_order {
 
                     .icon {
@@ -398,7 +398,7 @@
                     }
                 }
 
-                .list{
+                .list {
                     display: block;
                 }
             }
@@ -501,7 +501,7 @@
     .action_list {
         .contain {
             display: inline-block;
-            background: red;
+            background: #bec4ca;
             width: 50px;
             height: 50px;
             border-radius: 5px;
@@ -518,6 +518,10 @@
         }
     }
 
+    .list_action.gt_active {
+        display: block;
+    }
+
     .list_action {
         background: #fff;
         position: absolute;
@@ -532,11 +536,61 @@
         border: 1px solid #e8e9eb;
         border-top: none;
         width: 100%;
+        display: none;
 
         li {
             margin: 0 8px;
             padding: 8px 15px;
             line-height: 1.3;
+            cursor: pointer;
         }
+    }
+}
+
+.list_footer {
+    display: flex;
+
+    .number_show_order {
+        position: relative;
+
+        .current_numberPage {
+            background-color: #fff;
+            border: 1px solid #e8e9eb;
+            margin-bottom: 0px;
+            height: 35px;
+            padding: 5px 20px 0px 20px;
+            display: flex;
+            justify-content: space-between;
+            margin-right: 4px;
+        }
+        .list_number.gt_active{
+            display: block;
+        }
+        .list_number {
+            padding: 0;
+            margin: 0;
+            position: absolute;
+            list-style: none;
+            border: 1px solid #ddd;
+            width: 200%;
+            top: -102px;
+            background: #fff;
+            display: none;
+
+            li {
+                a {
+                    display: block;
+                    padding: 5px;
+                    padding-left: 10px;
+                }
+            }
+        }
+    }
+}
+
+.list_order_search{
+    .cancle_ghtk{
+        cursor: pointer;
+        color: red;
     }
 }
