--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10644,6 +10644,22 @@ a.text-dark:focus {
   }
 }
 
+.need_treatment_order {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 50px;
+}
+
+.need_treatment_order .update_status_order {
+  background: #e23b3b;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 700;
+}
+
 .page_search_orders #search_order {
   width: 60%;
   margin: 0 auto;
