--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -34,7 +34,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Nunito", sans-serif;
+  --font-family-sans-serif: "Roboto", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -66,7 +66,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -6139,7 +6139,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -6264,7 +6264,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Nunito", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -10763,7 +10763,6 @@ a.text-dark:focus {
   border: 1px solid transparent;
   font-size: 18px;
   color: #fff;
-  font-weight: bold;
 }
 
 .page_search_orders .categoris_order .list {
@@ -10899,7 +10898,6 @@ a.text-dark:focus {
 
 .menu .list .item a {
   font-size: 20px;
-  font-weight: 600;
 }
 
 #search_order_list,
@@ -11072,7 +11070,6 @@ a.text-dark:focus {
   border: 1px solid transparent;
   font-size: 18px;
   color: #fff;
-  font-weight: bold;
 }
 
 .header_order {
@@ -11172,7 +11169,6 @@ a.text-dark:focus {
   border: 1px solid transparent;
   font-size: 18px;
   color: #fff;
-  font-weight: bold;
 }
 
 .header_order .template-type {
@@ -11287,6 +11283,6 @@ a.text-dark:focus {
 }
 
 .Danggiao {
-  color: #f00;
+  color: #3490dc;
 }
 
