--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10644,6 +10644,30 @@ a.text-dark:focus {
   }
 }
 
+.Thanhcong {
+  color: #4ac54a;
+}
+
+.Dangchuyen {
+  color: #3490dc;
+}
+
+.Dangchuyenhoan {
+  color: #fb9307;
+}
+
+.Dahoan {
+  color: #921f74;
+}
+
+.Canxuly {
+  color: #e24343;
+}
+
+.Dahuy {
+  color: #6d6a6a;
+}
+
 .list_causes {
   padding: 0px 100px;
 }
@@ -11296,9 +11320,5 @@ a.text-dark:focus {
 .list_order_search .cancle_ghtk {
   cursor: pointer;
   color: red;
-}
-
-.Danggiao {
-  color: #3490dc;
 }
 
